--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://prakhar060703.github.io/NEWSbite-React-App",
+  "homepage": "http://mishrasaurabh12.github.io/NewsApp-Static",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
